k8s/ab-testing/deployment-b.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-api-variant-b
  namespace: aceest
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: aceest-api-variant-b
      version: variant-b
  template:
    metadata:
      labels:
        app: aceest-api-variant-b
        version: variant-b
    spec:
      containers:
        - name: api
          image: 2025ht66001/aceest-fitness:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
